--- a/backend_sanity/package.json
+++ b/backend_sanity/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     
     "build":"npm install",
-    "dev":"nodemon"
+    "dev":"nodemon index.js"
     
   },
   "author": "",
